# piscine-42

./: .gitignore  README_C08.md  ft_atoi.c  ft_print_combn.c  ftlib.h  main.c
42piscine/: .gitignore
42piscine/C04/ex05/: ft_atoi.c  ft_atoi_base.c  ft_atoi_base_with_pow.c  ft_find_index.c  ft_isspace.c  ft_pow.c  ft_putchar.c  ft_putnbr_base.c  libft.h  main.c
42piscine/C08/ex00/: ft.h
42piscine/C08/ex01/: ft_boolean.c  ft_boolean.h
42piscine/C08/ex02/: ft_abs.c  ft_abs.h
42piscine/C08/ex03/: ft_point.c  ft_point.h
42piscine/C08/ex04/: ft_stock_str.h
explorer/: a.out  print_str.c
libft/: libft.h
libft/src/: ft_count_words.c  ft_isspace.c  ft_putnbr.c  ft_putstr.c  ft_str_join.c  ft_str_to_tab.c  ft_strlen.c
naruto/: a.out  binNaruto copy.c  binNaruto.c  main.c  narutocust.h  utils.c
practice/makefile/calculator2/: CMakeLists.txt  add.c  div.c  main.c  mul.c  sub.c  sub.h
practice/makefile/calculator3/: CMakeCache.txt  CMakeLists.txt
practice/makefile/calculator3/include/: core.h  utils.h
practice/makefile/calculator3/libs/core/: CMakeLists.txt
practice/makefile/calculator3/libs/core/include/: core.h
practice/makefile/calculator3/libs/core/src/: add.c  sub.c
practice/makefile/calculator3/libs/utils/: CMakeLists.txt
practice/makefile/calculator3/libs/utils/include/: utils.h
practice/makefile/calculator3/libs/utils/src/: internal.c  internal.h  utils.c
practice/makefile/calculator3/src/: main.c
practice/makefile/math1/: CMakeLists.txt  Makefile  main.c  mymath.h  srcmath.c
stack/: a.out  print_stack.c
